--- a/app/templates/caption_generator.html
+++ b/app/templates/caption_generator.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="/">Your App</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/caption_generator">Caption Generator</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/publish_instagram">Publish to Instagram</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="background-animation"></div> <!-- New div for background animation -->
 
     <div class="container mt-5 p-4 rounded shadow">
@@ -51,7 +70,7 @@
         </div>
     </div>
 
-    <!-- External JavaScript -->
+    <!-- Correctly use the static endpoint -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
