working app with different tabs etc

--- a/app/templates/caption_generator.html
+++ b/app/templates/caption_generator.html
@@ -71,6 +71,6 @@
     </div>
 
     <!-- Correctly use the static endpoint -->
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
