--- a/app/templates/publish_instagram.html
+++ b/app/templates/publish_instagram.html
@@ -41,8 +41,8 @@
         <div class="form-group">
             <label for="profile">Select Account</label>
             <select class="form-control" id="profile">
-                <option value="productminimal">Product Minimal</option>
-                <option value="productsdesign">Products Design</option>
+                <option value="productminimal">productminimal</option>
+                <option value="productsdesign">products.design</option>
             </select>
         </div>
 
